# structify

./: Cargo.toml  README.md
.github/workflows/: publish.yml
crates/structify/: Cargo.toml
crates/structify-derive/: Cargo.toml
crates/structify-derive/src/: lib.rs
crates/structify/src/: lib.rs
