[package]
name = "structify-derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/klaatu01/structify"
description = "A procedural macro to transform functions into structs with state and execution dependencies"
documentation = "https://docs.rs/klaatu01/0.1.0/structify-derive"
readme = "../../README.md"
license = "MIT"
keywords = ["derive", "struct", "compose", "structify"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full"]}

