[package]
name = "structify"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/klaatu01/structify"
description = "A procedural macro to transform functions into structs with state and execution dependencies"
documentation = "https://docs.rs/klaatu01/0.1.0/structify"
readme = "README.md"
license = "MIT"
keywords = ["derive", "struct", "compose", "structify"]

[dependencies]
structify-derive = { version = "1", path = "../structify-derive" }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
